HMCL/src/main/resources/assets/css/root.css
/* ... */
.log-window .always-on-top-button {
    -fx-rotate: 0.0;
}

.log-window .always-on-top-button:selected {
    -fx-background-color: -monet-secondary-container-transparent-80;
    -fx-rotate: 45.0;
}


/*******************************************************************************
*                                                                              *
* JFX Spinner                                                                  *
*                                                                              *
*******************************************************************************/

.jfx-spinner .arc {
    -fx-stroke: -monet-primary-container;
}

.small-spinner {
    -jfx-radius: 9;
}

.small-spinner .arc {
    -fx-stroke-width: 3.0;
}

.small-spinner-pane .jfx-spinner {
    -jfx-radius: 9;
}

.spinner-pane .spinner-pane-content {
    -fx-padding: 10px;
    -fx-spacing: 10px;
}

/*******************************************************************************
*                                                                              *
* JFX Combo Box                                                                *
*                                                                              *
*******************************************************************************/

.jfx-combo-box {
    -jfx-focus-color: transparent;
    -jfx-unfocus-color: transparent;
    -fx-background-color: -monet-surface-container-highest;
    -fx-padding: 4;
    -fx-max-width: 1000000000;
}

.jfx-combo-box .arrow {
    -fx-background-color: -monet-on-surface-variant;
    -fx-shape: "M12 15 7 10H17L12 15Z";
}

.jfx-combo-box .text {
    -fx-fill: -monet-on-surface;
}

.jfx-combo-box .text-field {
    -fx-text-fill: -monet-on-surface;
}

.combo-box-popup .list-view {
    -fx-background-color: -monet-surface-container;
}

.combo-box-popup .list-view .jfx-list-cell {
    -fx-background-color: -monet-surface-container;
    -fx-text-fill: -monet-on-surface;
    -fx-cursor: hand;
    -fx-background-insets: 0.0;
}

.combo-box-popup .list-view .list-cell:odd:selected > .jfx-rippler > StackPane,
.combo-box-popup .list-view .list-cell:even:selected > .jfx-rippler > StackPane {
    -fx-background-color: -monet-secondary-container;
    -fx-text-fill: -monet-on-secondary-container;
}

.combo-box-popup .list-view .list-cell:hover > .jfx-rippler > StackPane {
    -fx-background-color: -monet-secondary-container-transparent-50;
}

.jfx-combo-box-warning {
    -jfx-focus-color: #D34336;
    -jfx-unfocus-color: #D34336;
}

.jfx-combo-box-warning .text {
    -fx-fill: #D34336;
}

/*.combo-box-popup .list-view .jfx-list-cell .jfx-rippler {*/
/*    -jfx-rippler-fill: -monet-primary-container;*/
/*}*/

/*******************************************************************************
*                                                                              *
* JFX Color Picker                                                             *
*                                                                              *
*******************************************************************************/

.jfx-color-picker:armed,
.jfx-color-picker:hover,
.jfx-color-picker:focused,
.jfx-color-picker {
    -fx-background-color: TRANSPARENT, TRANSPARENT, TRANSPARENT, TRANSPARENT;
    -fx-background-radius: 3px;
    -fx-background-insets: 0px;
    -fx-min-height: 25px;
}

.color-palette-region {
}

.color-palette-region .jfx-button {
    -fx-text-fill: -monet-on-surface;
}

.color-palette {
    -fx-background-color: -monet-surface;
}

.custom-color-dialog .jfx-tab-pane {
    -fx-background-color: -monet-surface;
}

.custom-color-dialog .custom-color-field {
    -jfx-unfocus-color: -monet-on-surface;
    -fx-background-color: TRANSPARENT;
    -fx-font-weight: BOLD;
    -fx-alignment: top-left;
    -fx-max-width: 300;
}

.custom-color-dialog .tab .tab-label {
    -fx-text-fill: -monet-on-surface;
}

.custom-color-dialog .tab .jfx-rippler {
    -jfx-rippler-fill: -monet-on-surface;
}

.custom-color-dialog .tab-selected-line {
    -fx-background-color: -monet-on-surface;
}

.custom-color-dialog .jfx-color-dialog-actions {
    -fx-background-color: -monet-surface;
    -fx-padding: 0.0 10.0 5.0 0.0;
    -fx-alignment: center-right;
}

.custom-color-dialog .jfx-color-dialog-accept {
    -fx-padding: 0.7em 0.8em;
}

.custom-color-dialog .jfx-color-dialog-cancel {
    -fx-text-fill: -monet-on-surface-variant;
    -fx-padding: 0.7em 0.8em;
}

/*******************************************************************************
 *                                                                             *
 * Table View                                                                  *
 *                                                                             *
 ******************************************************************************/

/* WE DEFINITELY NEED JFX TABLE-VIEW */

.table-view {
    -fx-padding: 3;
    -fx-background-color: -monet-surface-container-low;
}

.table-view,
.table-view .column-header,
.table-view .filler,
.table-view .column-header-background,
.table-row-cell {
    -fx-background-radius: 6;
    -fx-border-radius: 6;
}

.table-view .column-header,
.table-view .filler {
    -fx-background-color: transparent;
}

.table-view .column-header-background {
    -fx-background-color: -monet-surface-container-highest;
}

.table-row-cell {
    -fx-background-color: -monet-surface-container;
    -fx-table-cell-border-color: -monet-surface-container-lowest;
}

.table-row-cell:odd {
    -fx-background-color: -monet-surface-container-high;
}

.table-cell {
    -fx-background-color: transparent;
    -fx-text-fill: -monet-on-surface;
}

.table-view > .virtual-flow > .clipped-container > .sheet > .table-row-cell:filled:selected {
    -fx-background-color: -monet-secondary-container;
}

.table-view > .virtual-flow > .scroll-bar {
    -fx-skin: "org.jackhuang.hmcl.ui.construct.FloatScrollBarSkin";
}
/* ... */

